fix navigation container is behind cover

--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -4,6 +4,11 @@
    position: fixed;
    width: 100%;
    padding: 1rem;
+   z-index: 10;
+
+   &__logo {
+      cursor: pointer;
+   }
 
    &.scrolling::before {
       width: 100vw;
@@ -13,7 +18,7 @@
       top: 0;
       left: 0;
       background: rgba(255, 255, 255, 0.9);
-      z-index: -1
+      z-index: -1;
    }
 
    #menuToggle {
